[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gcpdiag"
version = "0.57.0"
description = "Run diagnostics in GCP projects."
authors = ["Google, Inc."]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
appdirs = "^1.4.4"
blessings = "^1.7"
boltons = "^21.0.0"

[tool.poetry.dev-dependencies]
astunparse = "^1.6.3"
bump2version = "^1.0.1"
coverage = "^6.4.2"
importlib-metadata = "^4.12.0"
isort = "^5.10.1"
mypy = "^0.971"
pdoc = "^12.0.2"
pyinstaller = "^5.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"
pytest-snapshot = "^0.9.0"
yapf = "^0.32.0"
